result.html added

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </h3>
         </header>
         <section id="survey-form-container">
-            <form action="">
+            <form action="result.html" method="GET" target="_blank">
                 <div class="input-box">
                     <label for="name">Name</label>
                     <br />
